<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_rgb_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Description -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_hex_input"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Red Channel Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/redInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_red_channel"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/redChannelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Green Channel Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/greenInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_green_channel"
        app:layout_constraintTop_toBottomOf="@id/redInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/greenChannelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Blue Channel Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blueInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_blue_channel"
        app:layout_constraintTop_toBottomOf="@id/greenInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blueChannelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Create Button -->
    <Button
        android:id="@+id/createColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rectangle_button"
        android:backgroundTint="#4CAF50"
        android:radius="0dp"
        android:text="@string/button_create_rgb_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blueInputLayout" /> <!-- Added backgroundTint attribute -->

    <!-- Color Display Panel -->
    <TextView
        android:id="@+id/colorPanel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="184dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:text="@string/text_color_display_panel"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createColorButton" />

</androidx.constraintlayout.widget.ConstraintLayout>